<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.ricardo.conadapp.fragments.RiesgoFragment.DeporteFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">
                <FrameLayout
                    android:id="@+id/card_fragment_deporte_1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="2dp"
                    >
                    <ImageView
                        android:src="@drawable/default_image"
                        android:scaleType="centerCrop"
                        android:id="@+id/imagen_deporte_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom">
                        <TextView
                            android:textStyle="bold"
                            android:background="#55000000"
                            android:padding="5dp"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/vida_deportiva_texto1"
                            android:textColor="@color/icons"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </FrameLayout>
                <FrameLayout
                    android:id="@+id/card_fragment_deporte_2"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="2dp"
                    >
                    <ImageView
                        android:src="@drawable/default_image"
                        android:scaleType="centerCrop"
                        android:id="@+id/imagen_deporte_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom">
                        <TextView
                            android:textStyle="bold"
                            android:background="#55000000"
                            android:padding="5dp"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/vida_deportiva_texto2"
                            android:textColor="@color/icons"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </FrameLayout>
                <FrameLayout
                    android:id="@+id/card_fragment_deporte_3"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="2dp"
                    >
                    <ImageView
                        android:src="@drawable/default_image"
                        android:scaleType="centerCrop"
                        android:id="@+id/imagen_deporte_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom">
                        <TextView
                            android:textStyle="bold"
                            android:background="#55000000"
                            android:padding="5dp"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/vida_deportiva_texto3"
                            android:textColor="@color/icons"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </FrameLayout>
                <FrameLayout
                    android:id="@+id/card_fragment_deporte_4"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="2dp"
                    >
                    <ImageView
                        android:src="@drawable/default_image"
                        android:scaleType="centerCrop"
                        android:id="@+id/imagen_deporte_4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom">
                        <TextView
                            android:textStyle="bold"
                            android:background="#55000000"
                            android:padding="5dp"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/vida_deportiva_texto4"
                            android:textColor="@color/icons"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </FrameLayout>
                <FrameLayout
                    android:id="@+id/card_fragment_deporte_5"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="2dp"
                    >
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom">
                        <TextView
                            android:textStyle="bold"
                            android:background="#55000000"
                            android:padding="5dp"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/vida_deportiva_texto5"
                            android:textColor="@color/icons"
                            android:textSize="15sp"/>
                    </LinearLayout>
                    <ImageView
                        android:src="@drawable/default_image"
                        android:scaleType="centerCrop"
                        android:id="@+id/imagen_deporte_5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom">
                        <TextView
                            android:textStyle="bold"
                            android:background="#55000000"
                            android:padding="5dp"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/vida_deportiva_texto5"
                            android:textColor="@color/icons"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>

